--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
+    "react-router-dom": "^7.5.0",
     "react-spinners": "^0.16.1",
     "react-toastify": "^11.0.5",
     "yup": "^1.6.1"
